fix the whitespace on auth screen

--- a/frontend/src/scenes/authentication/Login.scss
+++ b/frontend/src/scenes/authentication/Login.scss
@@ -4,6 +4,7 @@
 .bridge-page.login {
     .helper-links {
         text-align: center;
+        padding-top: 1rem;
         .lhs {
             float: left;
         }
